This commit adds individualized CSS files for three Content Models (basic image, large image and pdf). In addition, it fixes a bug where thumbnails were not showing up for large image and pdf solution packs.

--- a/css/islandoratheme.css
+++ b/css/islandoratheme.css
@@ -26,6 +26,11 @@ div#header-wrapper div#branding
   display: block;
 }
 
+#branding 
+{
+  padding: 25px 0px 28px 25px;
+}
+
 div#header-wrapper div#branding a
 {
   color: white;  
